Changelog for Yancy-Plugin-OpenAPI

{{ $NEXT }}