@@ -1,0 +1,77 @@
+{
+   "abstract" : "Generate an OpenAPI spec and API for a Yancy schema",
+   "author" : [
+      "Doug Bell <preaction@cpan.org>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Dist::Zilla version 6.012, CPAN::Meta::Converter version 2.150010",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : 2
+   },
+   "name" : "Yancy-Plugin-OpenAPI",
+   "no_index" : {
+      "directory" : [
+         "eg",
+         "examples",
+         "inc",
+         "share",
+         "t",
+         "xt"
+      ]
+   },
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "ExtUtils::MakeMaker" : "0"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "JSON::Validator" : "5.00",
+            "Mojolicious::Plugin::OpenAPI" : "5.00",
+            "Yancy" : "1.083",
+            "perl" : "5.016"
+         }
+      },
+      "test" : {
+         "recommends" : {
+            "CPAN::Meta" : "2.120900"
+         },
+         "requires" : {
+            "ExtUtils::MakeMaker" : "0",
+            "File::Spec" : "0",
+            "IO::Handle" : "0",
+            "IPC::Open3" : "0",
+            "Test::More" : "0"
+         }
+      }
+   },
+   "provides" : {
+      "Yancy::Plugin::OpenAPI" : {
+         "file" : "lib/Yancy/Plugin/OpenAPI.pm",
+         "version" : "0.001"
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/preaction/Yancy-Plugin-OpenAPI/issues"
+      },
+      "homepage" : "http://preaction.me/yancy/",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/preaction/Yancy-Plugin-OpenAPI.git",
+         "web" : "https://github.com/preaction/Yancy-Plugin-OpenAPI"
+      },
+      "x_IRC" : "irc://irc.libera.chat/#mojo-yancy"
+   },
+   "version" : "0.001",
+   "x_authority" : "cpan:PREACTION",
+   "x_generated_by_perl" : "v5.28.0",
+   "x_serialization_backend" : "Cpanel::JSON::XS version 4.06"
+}
+
