@@ -1,0 +1,59 @@
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
+use strict;
+use warnings;
+
+use 5.016;
+
+use ExtUtils::MakeMaker;
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Generate an OpenAPI spec and API for a Yancy schema",
+  "AUTHOR" => "Doug Bell <preaction\@cpan.org>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0
+  },
+  "DISTNAME" => "Yancy-Plugin-OpenAPI",
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.016",
+  "NAME" => "Yancy::Plugin::OpenAPI",
+  "PREREQ_PM" => {
+    "JSON::Validator" => "5.00",
+    "Mojolicious::Plugin::OpenAPI" => "5.00",
+    "Yancy" => "1.083"
+  },
+  "TEST_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0,
+    "File::Spec" => 0,
+    "IO::Handle" => 0,
+    "IPC::Open3" => 0,
+    "Test::More" => 0
+  },
+  "VERSION" => "0.001",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
+);
+
+
+my %FallbackPrereqs = (
+  "ExtUtils::MakeMaker" => 0,
+  "File::Spec" => 0,
+  "IO::Handle" => 0,
+  "IPC::Open3" => 0,
+  "JSON::Validator" => "5.00",
+  "Mojolicious::Plugin::OpenAPI" => "5.00",
+  "Test::More" => 0,
+  "Yancy" => "1.083"
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
