@@ -1,0 +1,24 @@
+# NAME
+
+Yancy::Plugin::OpenAPI - Generate an OpenAPI spec and API for a Yancy schema
+
+# VERSION
+
+version 0.001
+
+# SYNOPSIS
+
+# DESCRIPTION
+
+# SEE ALSO
+
+# AUTHOR
+
+Doug Bell <preaction@cpan.org>
+
+# COPYRIGHT AND LICENSE
+
+This software is copyright (c) 2021 by Doug Bell.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
