@@ -1,0 +1,20 @@
+requires "JSON::Validator" => "5.00";
+requires "Mojolicious::Plugin::OpenAPI" => "5.00";
+requires "Yancy" => "1.083";
+requires "perl" => "5.016";
+
+on 'test' => sub {
+  requires "ExtUtils::MakeMaker" => "0";
+  requires "File::Spec" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
+  requires "Test::More" => "0";
+};
+
+on 'test' => sub {
+  recommends "CPAN::Meta" => "2.120900";
+};
+
+on 'configure' => sub {
+  requires "ExtUtils::MakeMaker" => "0";
+};
