@@ -1,3 +1,5 @@
 Changelog for Yancy-Plugin-OpenAPI
 
 {{ $NEXT }}
+
+  Initial release.
